--- a/src/SideBar/SideBar.module.css
+++ b/src/SideBar/SideBar.module.css
@@ -27,20 +27,37 @@
   transition: all 0.2s ease !important;
 }
 
-.logo{
-  text-align: center;
-  border-bottom: 1px solid #e9ecef;
+.logo {
   display: flex;
-  justify-content: center;  /* centra orizzontalmente */
-  align-items: center;      /* centra verticalmente */
-  height: 15vh;            /* prende tutta l'altezza della viewport */
-  margin: 0; 
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px;
+  gap: 15px; 
+  border-bottom: 1px solid #e9ecef;
+  margin-bottom: 20px;
 }
 
-.logo > p {
-  color: gray;
-  font-weight: lighter;
+.logoIcon {
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logoText h1 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.logoText p {
+  margin: 0;
+  font-size: 12px;
+  color:gray;
+  font-weight:lighter;
 }
 
 .bottomElement {
