--- a/src/AddTask/AddTask.module.css
+++ b/src/AddTask/AddTask.module.css
@@ -16,7 +16,7 @@ margin-bottom: 16px;
 padding: 8px 12px;
 border-radius: 6px;
 border:none;
-background-color: white;;
+background-color: white;
 }
 
 .backButtonHome:hover {
