--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,12 +6,13 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+html, body, #root {
+  height: 100%;
 }
 
 .App {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
 }
