--- a/src/Home&LandPage/Task/Task.module.css
+++ b/src/Home&LandPage/Task/Task.module.css
@@ -152,7 +152,7 @@
   cursor: pointer;
 }
 
-.modifyTaskContainer:hover, .modifyCompletedTask:hover {
+.modifyTaskContainer:hover, .modifyCompletedTask:hover, .modifyExpiredTask:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transform: scale(1.02);
 }
@@ -160,6 +160,18 @@
 .modifyCompletedTask{
   background-color: rgb(241, 194, 194);
   border: 2px solid darkred;
+  border-radius: 12px;
+  margin: 15px 0;
+  padding: 20px;
+  display: flex;
+  align-items: flex-start;
+  gap: 15px;
+  transition: all 0.2s ease;
+  cursor:pointer;
+}
+.modifyExpiredTask{
+  background-color: #f8f9fa;
+  border: 2px solid #6c757d;
   border-radius: 12px;
   margin: 15px 0;
   padding: 20px;
