--- a/src/Modify&Tasks/ModifyTask/ModifyTaskModal/ModifyTaskModal.module.css
+++ b/src/Modify&Tasks/ModifyTask/ModifyTaskModal/ModifyTaskModal.module.css
@@ -1,3 +1,42 @@
-.Modal{
-  color:red;
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.modalContent {
+  border-radius: 10px;
+  padding: 1rem;
+  max-width: 50rem;
+  width: 70%;
+  max-height: 85vh;
+  background: white;
+  position: relative; /* utile per il bottone close */
+}
+
+
+.modalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.closeButton {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.modalFormContainer{
+  width: 100%;
 }
