--- a/src/Home&LandPage/Task/Task.module.css
+++ b/src/Home&LandPage/Task/Task.module.css
@@ -158,8 +158,8 @@
 }
 
 .modifyCompletedTask{
-  background-color: rgb(241, 194, 194);
-  border: 2px solid darkred;
+  background-color: #f8f9fa;
+  border: 2px solid #6c757d;
   border-radius: 12px;
   margin: 15px 0;
   padding: 20px;
@@ -168,10 +168,11 @@
   gap: 15px;
   transition: all 0.2s ease;
   cursor:pointer;
+  opacity: 0.6;
 }
 .modifyExpiredTask{
-  background-color: #f8f9fa;
-  border: 2px solid #6c757d;
+  background-color: rgb(241, 194, 194);
+  border: 2px solid darkred;
   border-radius: 12px;
   margin: 15px 0;
   padding: 20px;
