--- a/src/Modify&Tasks/ModifyTask/ModifyTaskModal/ModifyTaskModal.module.css
+++ b/src/Modify&Tasks/ModifyTask/ModifyTaskModal/ModifyTaskModal.module.css
@@ -9,8 +9,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
-
 
 .modalContent {
   border-radius: 10px;
@@ -19,43 +19,58 @@
   width: 70%;
   max-height: 85vh;
   background: white;
-  position: relative; /* utile per il bottone close */
+  position: relative;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.modalContent:focus {
+  outline: none !important;
+  border: none !important;
+}
 
-.modalFormContainer{
+.modalFormContainer {
   width: 100%;
 }
 
-.addTaskForm{
-  border: 1px solid #ccc;
-  display:grid;
-  width:60%;
-  height: 70%;
-  align-items: center;
-  margin: auto;
-  padding: 20px;
+.modalForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.modalTaskFormCancel{
+  background-color: transparent;
+  border: none;
+  color:white;
+  background-color: black;
   border-radius: 10px;
-  gap:10px;
-  background-color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5rem;
+  align-self: flex-end;
+  margin-left: 15rem;
+  width:15%;
 }
-
-.addTaskFormSubtitle{
-  color:gray;
-  font-weight:lighter;
+.modalTaskFormCancel:hover{
+  transform: scale(1.05);
+  transition: transform 0.2s ease-in-out;
 }
-
-.addTaskFormLabel{
-  color:black;
-  font-weight: bold;
-}
-
-.addTaskFormTitle{
+.modalTaskFormTitle{
   color:black;
   font-weight: bolder;
 }
 
-.addTaskFormInput{
+.modalFormSubtitle{
+  color:gray;
+  font-weight:lighter;
+}
+
+.modalFormTitleTask{
+  color:black;
+  font-weight: bolder;
+}
+.modalTaskFormInput {
   border-radius: 10px;
   font-weight: lighter;
   border: 1px solid #dee2e6;
@@ -65,15 +80,7 @@
   background-color: #e9ecef;
 }
 
-.addTaskFormInput::placeholder{
-  color: #6c757d;
-}
-.addTaskFormInput:active, .addTaskFormInput:focus, .addTaskFormTextarea:active, .addTaskFormTextarea:focus{
-  outline: none;
-  border: 2px solid black;
-}
-
-.addTaskFormTextarea{
+.modalTaskFormTextArea{
   border-radius: 10px;
   font-weight: lighter;
   border: 1px solid #dee2e6;
@@ -85,43 +92,34 @@
   height: 70px;      
   resize: none;       
   overflow-y: auto;
+  padding:0.4rem;
 }
 
-.addTaskFormTextarea::placeholder{
-  color: #6c757d;
-}
-
-.addTaskFormButtons{
-  display:flex;
-  gap:20px;
-}
-
-.addTaskFormSubmit{
-  background-color: black;
+.modalTaskFormModifyButton{
+  background-color: darkgreen;
   color:white;
   border:none;
-  width:80%;
+  width:50%;
+  height: 40px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  cursor:pointer;
+  margin-right: 1rem;
+}
+
+.modalTaskFormCancelTaskButton{
+  background-color: darkred;
+  color:white;
+  border:none;
+  width:50%;
   height: 40px;
   border-radius: 10px;
   margin-bottom: 10px;
   cursor:pointer;
 }
 
-.addTaskFormCancel{
-  background-color: white;
-  color:black;
-  border:1px solid #ccc;
-  width:20%;
-  height: 40px;
-  cursor:pointer;
-  border-radius: 10px;
-}
-
-.addTaskFormErrorMessage{
-  color:red;
-  font-weight: bolder;
-}
-
-.addTaskFormError{
-  border: 2px solid red !important;
+.modalTaskFormButtons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
 }
