--- a/src/SideBar/SideBar.module.css
+++ b/src/SideBar/SideBar.module.css
@@ -73,7 +73,7 @@
   gap: 15px; 
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   border-right: 1px solid rgba(0, 0, 0, 0.3);
-  margin-bottom: 0; /* CAMBIATO: da 20px a 0 per eliminare gap */
+  margin-bottom: 0; 
   flex-shrink: 0;
   background-color: rgb(248, 247, 247);
 }
